--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  stockfish: ^1.7.1
   flutter:
     sdk: flutter
 
@@ -53,6 +54,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/stockfish/stockfish
+    - assets/stockfish/stockfish.exe
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
